# hackathon

./: .gitignore  docker-compose.yml
chat-engine/: .gitignore  .prettierignore  nest-cli.json  package-lock.json  package.json  tsconfig.json
chat-engine/libs/config/src/: config.module.ts  dialog-flow-conf.ts  index.ts  kafka.config.ts
chat-engine/libs/database/src/: database.module.ts
chat-engine/libs/interfaces/src/: index.ts
chat-engine/libs/interfaces/src/config/: config.enum.ts
chat-engine/libs/interfaces/src/kafka/: topic.interface.ts
chat-engine/prisma/: schema.prisma
chat-engine/prisma/migrations/20250417075747_add_file_model/: migration.sql
chat-engine/prisma/migrations/20250417092825_add/: migration.sql
chat-engine/src/: app.controller.ts  app.module.ts  main.ts
chat-engine/src/dialogflow/: dialogflow.controller.ts  dialogflow.module.ts  dialogflow.service.ts
chat-engine/src/file/: file.controller.ts  file.service.ts
chat-engine/src/kafka/: kafka.controller.ts  kafka.module.ts  kafka.service.ts  producer.service.ts
chat-engine/src/models/: file.model.ts
document-search/: pyproject.toml
document-search/docs/: vidnovlennya.txt
document-search/src/: app.py  config.py  document_loader.py  main.py  search_chain.py
kafka/: docker-compose.yml
telegram-bot/: Dockerfile  pyproject.toml
telegram-bot/src/bot/: bot.py
telegram-bot/src/bot/db/: models.py
telegram-bot/src/bot/handlers/: __init__.py  eVidnovlennya.py  start.py
telegram-bot/src/bot/services/: kafka_service.py
telegram-bot/src/bot/tests/: test_kafka_service.py
