[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Processing messages from Telegram for Hackaton project"
authors = ["a1omax <maksimevstratev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.20.0"
loguru = "^0.7.3"
aiokafka = "^0.12.0"
python-dotenv = "^1.1.0"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]